--- a/resources/style.qss
+++ b/resources/style.qss
@@ -1,6 +1,6 @@
 /* Основной шрифт с запасным вариантом */
 * {
-    font-family: "Segoe UI", Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 9pt;
 }
 
